<resources>
    <string name="app_name">HealthTime</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txtv_logo">Logo aqui</string>
    <string name="txtv_devby">Desenvolvido por:</string>
    <string name="txtv_nome">Isaac Silva</string>
    <string name="txtv_email">yzaak.silva@gmail.com</string>
    <string name="txtv_versao">Versão 1.0</string>
    <string name="hor_rio_de_in_cio">Horário de Início</string>
    <string name="n_de_lembretes">Nº de lembretes</string>
    <string name="horario_inicial" />
    <string name="horario_inicio">Horário Inicial</string>
    <string name="gravar">gravar</string>
    <string name="restri_es">Restrições</string>
    <string name="telefone_da_farm_cia">Telefone da farmácia</string>
    <string name="informa_es_do_medicamento">Informações do medicamento</string>
    <string name="nome_da_farm_cia">Nome da farmácia</string>
    <string name="nome_do_medicamento">Nome do medicamento</string>
    <string name="info_medicamento">Informações do Medicamento</string>
</resources>
